--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "backend-app",
+  "name": "aevdeo-puppeteer-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.8"
   }
 }
